# image_processor

./: CMakeLists.txt  README.md  image_processor.cpp
lib/: color.cpp  color.h  controller.cpp  controller.h  image.cpp  image.h  io.cpp  io.h  parser.cpp  parser.h
lib/filters/: crop.cpp  crop.h  edge.cpp  edge.h  filter.h  gs.cpp  gs.h  hues.cpp  hues.h  matrix_filter.cpp  matrix_filter.h  neg.cpp  neg.h  seamcarve.cpp  seamcarve.h  sharp.cpp  sharp.h  sobel.cpp  sobel.h
